feat: switch jpackage distribution to Linux/Windows only
macOS is distributed via Homebrew (zip); Linux gets .deb and Windows
gets .msi via jpackage. macOS jpackage jobs removed from workflow.

- Add package-zip fn (zip for Homebrew) alongside package (jpackage)
- Add bb package-zip task; fix release task to call package-zip
- Add build-zip CI job (ubuntu, runs bb package-zip via Babashka)
- Remove dgt.cmd: Windows now uses the jpackage native launcher
- Drop --mac-package-identifier from workflow (macOS no longer built)

🤖 Generated with [eca](https://eca.dev)

Co-Authored-By: eca-agent <git@eca.dev>